# FactionHistory2csv

./: README.md  meson.build
src/: Decoder.h  FactionHistory.h  Processor.h  main.c
src/Decoder/: DeivdeHistory.c  FactionBoard.c  StorageHistory.c
src/Processor/: DeivdeHistory.c  FactionBoard.c  RawHistory.c  StorageHistory.c
